--- a/style.css
+++ b/style.css
@@ -45,10 +45,8 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-radius: 4px;
+    margin-top: 40px;
 }
 
 .saved-header {
